--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@ibm/transistor-js",
   "version": "0.1.0",
   "description": "JavaScript telemetry tooling for open/inner source projects",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install"
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.7",
     "@commitlint/config-conventional": "^17.6.7",
-    "husky": "^8.0.3"
+    "husky": "^8.0.3",
+    "typescript": "^5.1.6"
   }
 }
