--- a/package.json
+++ b/package.json
@@ -1,16 +1,9 @@
 {
   "name": "@ibm/transistor-js",
-  "version": "0.1.0",
   "description": "JavaScript telemetry tooling for open/inner source projects",
-  "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky install"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/carbon-design-system/transistor-js.git"
-  },
+  "version": "0.1.0",
+  "license": "Apache-2.0",
+  "author": "IBM",
   "keywords": [
     "ibm",
     "telemetry",
@@ -19,20 +12,29 @@
     "javascript",
     "typescript"
   ],
-  "author": "IBM",
-  "license": "Apache-2.0",
+  "homepage": "https://github.com/carbon-design-system/transistor-js#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/carbon-design-system/transistor-js.git"
+  },
   "bugs": {
     "url": "https://github.com/carbon-design-system/transistor-js/issues"
   },
-  "homepage": "https://github.com/carbon-design-system/transistor-js#readme",
+  "type": "module",
   "engines": {
     "node": "18",
     "npm": "9"
+  },
+  "scripts": {
+    "prepare": "husky install",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.7",
     "@commitlint/config-conventional": "^17.6.7",
     "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
+    "prettier": "^3.0.0",
     "typescript": "^5.1.6"
   }
 }
