--- a/renovate.json5
+++ b/renovate.json5
@@ -7,5 +7,6 @@
 
     // https://docs.renovatebot.com/presets-schedule/#scheduledaily
     "schedule:earlyMondays",
-  ]
+  ],
+  "commitMessagePrefix": "deps:"
 }
