--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -19,5 +19,6 @@ jobs:
           # TODO: correct name
           package-name: '@ibm/transistor-js'
           pull-request-title-pattern: 'release${scope}: release${component} ${version}'
+          token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
 
     # TODO: npm publication https://github.com/google-github-actions/release-please-action#automating-publication-to-npm
