--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -16,6 +16,7 @@ jobs:
         uses: google-github-actions/release-please-action@v3
         with:
           release-type: node
+          draft-pull-request: true
           # TODO: correct name
           package-name: '@ibm/transistor-js'
           pull-request-title-pattern: 'release${scope}: release${component} ${version}'
