--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "npm": "9"
   },
   "scripts": {
+    "gen-schema": "ts-json-schema-generator --path ./src/schemas/Schema.ts --type Schema > src/schemas/transistor-config.schema.json",
     "lint": "eslint --max-warnings=0 .",
     "lint:fix": "eslint --fix --max-warnings=0 .",
     "prepare": "husky install",
@@ -53,6 +54,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
     "prettier": "^3.0.0",
+    "ts-json-schema-generator": "^1.2.0",
     "typescript": "^5.1.6"
   }
 }
