--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "npm": "9"
   },
   "scripts": {
-    "gen-schema": "ts-json-schema-generator --path ./src/schemas/Schema.ts --type Schema > src/schemas/transistor-config.schema.json",
+    "build:schema": "ts-json-schema-generator --path ./src/schemas/Schema.ts --type Schema > src/schemas/transistor-config.schema.json",
     "lint": "eslint --max-warnings=0 .",
     "lint:fix": "eslint --fix --max-warnings=0 .",
     "prepare": "husky install",
