--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint-config-standard-with-typescript": "^37.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-jsdoc": "^46.4.6",
     "eslint-plugin-n": "^16.0.1",
     "eslint-plugin-notice": "^0.9.10",
     "eslint-plugin-promise": "^6.1.1",
