--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "lint": "eslint --max-warnings=0 .",
     "lint:fix": "eslint --fix --max-warnings=0 .",
     "prepare": "husky install",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@opentelemetry/api": "^1.4.1",
@@ -48,6 +49,7 @@
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@vitest/coverage-v8": "^0.34.1",
     "eslint": "^8.46.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-config-standard-with-typescript": "^37.0.0",
@@ -63,6 +65,7 @@
     "prettier": "^3.0.1",
     "rimraf": "^5.0.1",
     "ts-json-schema-generator": "^1.2.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vitest": "^0.34.1"
   }
 }
