fix: move origin tokenization to its own file
- also increase unit test coverage

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "lint": "eslint --max-warnings=0 .",
     "lint:fix": "eslint --fix --max-warnings=0 .",
     "prepare": "husky install",
-    "test": "vitest",
+    "test": "vitest --coverage",
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
