--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
     "@opentelemetry/api": "^1.4.1",
     "@opentelemetry/resources": "^1.15.2",
     "@opentelemetry/sdk-metrics": "^1.15.2",
-    "@opentelemetry/semantic-conventions": "^1.15.2"
+    "@opentelemetry/semantic-conventions": "^1.15.2",
+    "tmp-promise": "^3.0.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
+    "@types/tmp": "^0.2.3",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@vitest/coverage-v8": "^0.34.1",
     "eslint": "^8.46.0",
