--- a/package.json
+++ b/package.json
@@ -44,11 +44,14 @@
     "@opentelemetry/resources": "^1.15.2",
     "@opentelemetry/sdk-metrics": "^1.15.2",
     "@opentelemetry/semantic-conventions": "^1.15.2",
+    "ajv": "^8.12.0",
+    "js-yaml": "^4.1.0",
     "tmp-promise": "^3.0.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
+    "@types/js-yaml": "^4.0.5",
     "@types/tmp": "^0.2.3",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@vitest/coverage-v8": "^0.34.1",
@@ -67,7 +70,7 @@
     "lint-staged": "^13.2.3",
     "prettier": "^3.0.1",
     "rimraf": "^5.0.1",
-    "ts-json-schema-generator": "^1.2.0",
+    "ts-json-schema-generator": "^1.3.0",
     "typescript": "^5.1.6",
     "vitest": "^0.34.1"
   }
