ci: add deps scope to renovate bot commit message prefixes

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -9,7 +9,7 @@
     'schedule:earlyMondays'
   ],
   // Release Please does not consider `deps:` to be releasable units
-  commitMessagePrefix: 'fix:',
+  commitMessagePrefix: 'fix(deps):',
   commitMessageAction: 'upgrade',
   // Tell dependency dashboard to only require PR creation approval for major versions
   major: {
