fix: use semver to get package version details, adjust test

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@opentelemetry/sdk-metrics": "^1.15.2",
     "@opentelemetry/semantic-conventions": "^1.15.2",
     "reflect-metadata": "^0.1.13",
+    "semver": "^7.5.4",
     "tmp-promise": "^3.0.3"
   },
   "devDependencies": {
