--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
     "@types/js-yaml": "^4.0.5",
+    "@types/node": "^18.17.12",
     "@types/tmp": "^0.2.3",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@vitest/coverage-v8": "^0.34.3",
