test: refactor all config validation tests to use fixtures

--- a/src/test/__fixtures/config-files/valid/empty-jsx-elements.yml
+++ b/src/test/__fixtures/config-files/valid/empty-jsx-elements.yml
@@ -9,8 +9,5 @@ collect:
   npm:
     dependencies:
   jsx:
-    elements:
-      allowedAttributeStringValues:
-        - 'one'
-        - 'two'
+    elements: {}
 projectId: '123'
