--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "type": "module",
   "bin": {
-    "ibmtelemetrics": "./dist/index.js"
+    "ibmtelemetrics": "./dist/main/index.js"
   },
   "engines": {
     "node": "18",
@@ -54,7 +54,6 @@
     "@commitlint/config-conventional": "^17.7.0",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^18.17.12",
-    "@types/tmp": "^0.2.3",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@vitest/coverage-v8": "^0.34.3",
     "eslint": "^8.46.0",
