--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "type": "module",
   "bin": {
-    "ibmtelemetrics": "./dist/index.js"
+    "ibmtelemetrics": "./dist/main/index.js"
   },
   "engines": {
     "node": "18",
@@ -44,12 +44,16 @@
     "@opentelemetry/resources": "^1.15.2",
     "@opentelemetry/sdk-metrics": "^1.15.2",
     "@opentelemetry/semantic-conventions": "^1.15.2",
+    "ajv": "^8.12.0",
+    "js-yaml": "^4.1.0",
     "reflect-metadata": "^0.1.13",
     "tmp-promise": "^3.0.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
+    "@types/js-yaml": "^4.0.5",
+    "@types/node": "^18.17.12",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@vitest/coverage-v8": "^0.34.3",
     "eslint": "^8.46.0",
@@ -67,7 +71,7 @@
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.2",
     "rimraf": "^5.0.1",
-    "ts-json-schema-generator": "^1.2.0",
+    "ts-json-schema-generator": "^1.3.0",
     "typescript": "^5.1.6",
     "vitest": "^0.34.3"
   }
