--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@opentelemetry/sdk-metrics": "^1.15.2",
     "@opentelemetry/semantic-conventions": "^1.15.2",
     "ajv": "^8.12.0",
+    "commander": "^11.0.0",
     "js-yaml": "^4.1.0",
     "reflect-metadata": "^0.1.13",
     "tmp-promise": "^3.0.3"
