--- a/package.json
+++ b/package.json
@@ -46,7 +46,10 @@
     "@opentelemetry/semantic-conventions": "^1.15.2",
     "ajv": "^8.12.0",
     "js-yaml": "^4.1.0",
+    "lodash": "^4.17.21",
+    "object-scan": "^19.0.2",
     "reflect-metadata": "^0.1.13",
+    "semver": "^7.5.4",
     "tmp-promise": "^3.0.3"
   },
   "devDependencies": {
@@ -54,6 +57,7 @@
     "@commitlint/config-conventional": "^17.7.0",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^18.17.12",
+    "@types/lodash": "^4.14.198",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@vitest/coverage-v8": "^0.34.3",
     "eslint": "^8.46.0",
