--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "lint": "eslint --max-warnings=0 .",
     "lint:fix": "eslint --fix --max-warnings=0 .",
     "prepare": "husky install",
-    "test": "vitest --coverage",
-    "test:coverage": "vitest run --coverage"
+    "test": "vitest run --coverage",
+    "test:watch": "vitest --coverage"
   },
   "dependencies": {
     "@opentelemetry/api": "^1.6.0",
