--- a/.github/workflows/dco.yml
+++ b/.github/workflows/dco.yml
@@ -19,7 +19,7 @@ jobs:
           path-to-signatures: "dco-signatures.json"
           path-to-document: "https://github.com/ibm-telemetry/telemetry-dco/blob/main/dco.md"
           branch: "main"
-          allowlist: bot*
+          allowlist: renovate[bot],github-actions[bot]
           remote-organization-name: ibm-telemetry
           remote-repository-name: telemetry-dco
           create-file-commit-message: "chore: create file to store dco signatures"
