fix: move deps to dev deps, update ci scripts

--- a/package.json
+++ b/package.json
@@ -35,50 +35,48 @@
     "build": "tsc",
     "build:schema": "ts-json-schema-generator --path ./src/schemas/Schema.ts --type Schema > src/schemas/telemetry-config.schema.json",
     "build:watch": "tsc --watch",
-    "clean": "rimraf dist",
-    "lint": "eslint --max-warnings=0 .",
-    "lint:fix": "eslint --fix --max-warnings=0 .",
+    "clean": "rimraf dist .test-coverage",
+    "lint": "scripts/lint",
+    "lint:fix": "scripts/lint_and_fix",
     "prepare": "husky install",
     "test": "vitest run --coverage",
     "test:watch": "vitest --coverage"
   },
-  "dependencies": {
+  "devDependencies": {
+    "@commitlint/cli": "^17.8.1",
+    "@commitlint/config-conventional": "^17.8.1",
     "@opentelemetry/api": "^1.6.0",
     "@opentelemetry/resources": "^1.17.1",
     "@opentelemetry/sdk-metrics": "^1.17.1",
     "@opentelemetry/semantic-conventions": "^1.17.1",
-    "ajv": "^8.12.0",
-    "commander": "^11.1.0",
-    "js-yaml": "^4.1.0",
-    "lodash": "^4.17.21",
-    "object-scan": "^19.0.5",
-    "reflect-metadata": "^0.1.13",
-    "semver": "^7.5.4",
-    "tmp-promise": "^3.0.3"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^17.8.1",
-    "@commitlint/config-conventional": "^17.8.1",
     "@types/js-yaml": "^4.0.8",
     "@types/lodash": "^4.14.200",
     "@types/node": "^18.18.6",
-    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@vitest/coverage-v8": "^0.34.6",
-    "eslint": "^8.51.0",
+    "ajv": "^8.12.0",
+    "commander": "^11.1.0",
+    "eslint": "^8.52.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-config-standard-with-typescript": "^39.1.1",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-jsdoc": "^46.8.2",
     "eslint-plugin-n": "^16.2.0",
     "eslint-plugin-notice": "^0.9.10",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-vitest": "^0.3.3",
+    "eslint-plugin-vitest": "^0.3.8",
     "husky": "^8.0.3",
+    "js-yaml": "^4.1.0",
     "lint-staged": "^14.0.1",
+    "lodash": "^4.17.21",
+    "object-scan": "^19.0.5",
     "prettier": "^3.0.3",
+    "reflect-metadata": "^0.1.13",
     "rimraf": "^5.0.5",
+    "semver": "^7.5.4",
+    "tmp-promise": "^3.0.3",
     "ts-json-schema-generator": "^1.4.0",
     "typescript": "^5.2.2",
     "vitest": "^0.34.6"
