--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "javascript",
     "typescript"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "homepage": "https://github.com/ibm-telemetry/telemetry-js#readme",
   "repository": {
     "type": "git",
@@ -22,19 +25,19 @@
   },
   "type": "module",
   "bin": {
-    "ibmtelemetry": "./dist/main/index.js"
+    "ibmtelemetry": "./dist/out.js"
   },
   "engines": {
-    "node": "18",
-    "npm": "9"
+    "node": ">=16",
+    "npm": ">=8"
   },
   "files": [
-    "dist/main"
+    "dist/out.js"
   ],
   "scripts": {
     "build": "tsc",
-    "build:schema": "ts-json-schema-generator --path ./src/schemas/Schema.ts --type Schema > src/schemas/telemetry-config.schema.json",
     "build:watch": "tsc --watch",
+    "bundle": "node esbuild.js",
     "clean": "rimraf dist .test-coverage",
     "lint": "scripts/lint",
     "lint:fix": "scripts/lint_and_fix",
@@ -45,6 +48,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.8.1",
     "@commitlint/config-conventional": "^17.8.1",
+    "@ibm/telemetry-config-schema": "^0.2.0",
     "@opentelemetry/api": "^1.6.0",
     "@opentelemetry/resources": "^1.17.1",
     "@opentelemetry/sdk-metrics": "^1.17.1",
@@ -56,6 +60,7 @@
     "@vitest/coverage-v8": "^0.34.6",
     "ajv": "^8.12.0",
     "commander": "^11.1.0",
+    "esbuild": "^0.19.5",
     "eslint": "^8.52.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-config-standard-with-typescript": "^39.1.1",
