--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "type": "module",
   "bin": {
-    "ibmtelemetry": "./dist/out.js"
+    "ibmtelemetry": "dist/out.js"
   },
   "engines": {
     "node": ">=16",
