ci: switch to github token generation actions

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -13,11 +13,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: 'Generate token 🔐'
-        uses: jdharvey-ibm/github-app-token@main
-        id: generate_token
+        uses: actions/create-github-app-token@v1
+        id: app-token
         with:
-          app_id: ${{ secrets.TELEMETRY_APP_ID }}
-          private_key: ${{ secrets.TELEMETRY_APP_PRIVATE_KEY }}
+          app-id: ${{ secrets.TELEMETRY_APP_ID }}
+          private-key: ${{ secrets.TELEMETRY_APP_PRIVATE_KEY }}
 
       - name: Update release PR 🔄
         uses: google-github-actions/release-please-action@v3
@@ -26,6 +26,6 @@ jobs:
           draft-pull-request: true
           package-name: '@ibm/telemetry-js'
           pull-request-title-pattern: 'release${scope}: release${component} ${version}'
-          token: ${{ steps.generate_token.outputs.token }}
+          token: ${{ steps.app-token.outputs.token }}
 
     # TODO: npm publication https://github.com/google-github-actions/release-please-action#automating-publication-to-npm
