ci: lint fix and use node 20

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -29,18 +29,32 @@ jobs:
           pull-request-title-pattern: 'release${scope}: release${component} ${version}'
           token: ${{ steps.app-token.outputs.token }}
           # The logic below handles the npm publication:
-      - uses: actions/checkout@v2
-      # these if statements ensure that a publication only occurs when
-      # a new release is created:
+      - name: Checkout 🛎
+        uses: actions/checkout@v4
+          # these if statements ensure that a publication only occurs when
+          # a new release is created:
         if: ${{ steps.release.outputs.release_created }}
-      - uses: actions/setup-node@v1
+
+      - name: Setup Node 🏗
+        uses: actions/setup-node@v3
         with:
-          node-version: 12
+          node-version: 20
+          cache: 'npm'
           registry-url: 'https://registry.npmjs.org'
         if: ${{ steps.release.outputs.release_created }}
-      - run: npm ci
+
+      - name: Install Node Modules 🔧
+        run: npm install
         if: ${{ steps.release.outputs.release_created }}
-      - run: npm publish
+
+      - name: Build 🔨
+        run: |
+          npm run build
+          npm run bundle
+        if: ${{ steps.release.outputs.release_created }}
+
+      - name: Publish 🚀
+        run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPMJS_PUBLISH_TOKEN}}
         if: ${{ steps.release.outputs.release_created }}
