--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -30,7 +30,8 @@ jobs:
           token: ${{ steps.app-token.outputs.token }}
           # The logic below handles the npm publication:
       - name: Checkout 🛎
-        uses: actions/checkout@v4
+        uses:
+          actions/checkout@v4
           # these if statements ensure that a publication only occurs when
           # a new release is created:
         if: ${{ steps.release.outputs.release_created }}
