ci: add automated npm publish via release-please (#129)
* ci: add automated npm publish via release-please

* ci: lint fix and use node 20

* ci: lint

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -21,11 +21,41 @@ jobs:
 
       - name: Update release PR 🔄
         uses: google-github-actions/release-please-action@v3
+        id: release
         with:
           release-type: node
           draft-pull-request: true
           package-name: '@ibm/telemetry-js'
           pull-request-title-pattern: 'release${scope}: release${component} ${version}'
           token: ${{ steps.app-token.outputs.token }}
+          # The logic below handles the npm publication:
+      - name: Checkout 🛎
+        uses:
+          actions/checkout@v4
+          # these if statements ensure that a publication only occurs when
+          # a new release is created:
+        if: ${{ steps.release.outputs.release_created }}
 
-    # TODO: npm publication https://github.com/google-github-actions/release-please-action#automating-publication-to-npm
+      - name: Setup Node 🏗
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+          cache: 'npm'
+          registry-url: 'https://registry.npmjs.org'
+        if: ${{ steps.release.outputs.release_created }}
+
+      - name: Install Node Modules 🔧
+        run: npm install
+        if: ${{ steps.release.outputs.release_created }}
+
+      - name: Build 🔨
+        run: |
+          npm run build
+          npm run bundle
+        if: ${{ steps.release.outputs.release_created }}
+
+      - name: Publish 🚀
+        run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.NPMJS_PUBLISH_TOKEN}}
+        if: ${{ steps.release.outputs.release_created }}
