--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -28,18 +28,18 @@ jobs:
           package-name: '@ibm/telemetry-js'
           pull-request-title-pattern: 'release${scope}: release${component} ${version}'
           token: ${{ steps.app-token.outputs.token }}
-          # The logic below handles the npm publication:
+
+        #
+        # The logic below handles npm publication
+        #
       - name: Checkout 🛎
-        uses:
-          actions/checkout@v4
-          # these if statements ensure that a publication only occurs when
-          # a new release is created:
+        uses: actions/checkout@v4
         if: ${{ steps.release.outputs.release_created }}
 
       - name: Setup Node 🏗
         uses: actions/setup-node@v3
         with:
-          node-version: 20
+          node-version: '20'
           cache: 'npm'
           registry-url: 'https://registry.npmjs.org'
         if: ${{ steps.release.outputs.release_created }}
