feat(core): move to schema version 0.3.0
- add export disable envvar awareness
- add opt-out envvar awareness
- update test fixtures
- remove eslint-config-standard since it was causing linter crashes

--- a/src/test/__fixtures/config-files/invalid/missing-keys/missing-endpoint.yml
+++ b/src/test/__fixtures/config-files/invalid/missing-keys/missing-endpoint.yml
@@ -5,9 +5,12 @@
 # LICENSE file in the root directory of this source tree.
 #
 version: 1
-endpoint: 'https://example.com/v1/metrics'
 collect:
   npm:
     dependencies:
-  jsx: {}
+  jsx:
+    elements:
+      allowedAttributeStringValues:
+        - 'one'
+        - 'two'
 projectId: '123'
