--- a/src/test/__fixtures/config-files/invalid/missing-keys/missing-collect.yml
+++ b/src/test/__fixtures/config-files/invalid/missing-keys/missing-collect.yml
@@ -5,4 +5,5 @@
 # LICENSE file in the root directory of this source tree.
 #
 version: 1
+endpoint: 'https://example.com/v1/metrics'
 projectId: '123'
