--- a/src/test/__fixtures/config-files/invalid/missing-keys/missing-project-id.yml
+++ b/src/test/__fixtures/config-files/invalid/missing-keys/missing-project-id.yml
@@ -5,6 +5,7 @@
 # LICENSE file in the root directory of this source tree.
 #
 version: 1
+endpoint: 'https://example.com/v1/metrics'
 collect:
   npm:
     dependencies:
