--- a/src/test/__fixtures/config-files/valid/all-keys.yml
+++ b/src/test/__fixtures/config-files/valid/all-keys.yml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://unpkg.com/@ibm/telemetry-config-schema/dist/config.schema.json
 #
 # Copyright IBM Corp. 2023, 2023
 #
@@ -5,6 +6,7 @@
 # LICENSE file in the root directory of this source tree.
 #
 version: 1
+endpoint: 'https://example.com/v1/metrics'
 collect:
   npm:
     dependencies:
