--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@typescript-eslint/parser": "^6.11.0",
     "@vitest/coverage-v8": "^0.34.6",
     "ajv": "^8.12.0",
+    "ci-info": "^4.0.0",
     "commander": "^11.1.0",
     "esbuild": "^0.19.5",
     "eslint": "^8.54.0",
