--- a/.github/workflows/dco.yml
+++ b/.github/workflows/dco.yml
@@ -15,6 +15,8 @@ jobs:
         with:
           app-id: ${{ secrets.TELEMETRY_APP_ID }}
           private-key: ${{ secrets.TELEMETRY_APP_PRIVATE_KEY }}
+          owner: ${{ github.repository_owner }}
+          repositories: 'telemetry-dco'
 
       - name: 'DCO Assistant 📝'
         if:
