--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "tmp-promise": "^3.0.3",
     "ts-json-schema-generator": "^1.5.0",
     "typescript": "^5.3.3",
+    "vite": "^5.0.8",
     "vitest": "^0.34.6"
   }
 }
