feat: run telemetry collection as a background process (#147)
* feat: run telemetry collection as a background process

* fix: moving things around

* fix: package-lock.json command update

---------

Co-authored-by: Joe Harvey <51208233+jdharvey-ibm@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -25,14 +25,15 @@
   },
   "type": "module",
   "bin": {
-    "ibmtelemetry": "dist/out.js"
+    "ibmtelemetry": "dist/collect.js"
   },
   "engines": {
     "node": ">=16",
     "npm": ">=8"
   },
   "files": [
-    "dist/out.js"
+    "dist/background-process.js",
+    "dist/collect.js"
   ],
   "scripts": {
     "build": "tsc",
