--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,7 +14,9 @@ sonar.coverage.exclusions=\
   **/esbuild*js,\
   **/index.ts,\
   **/interfaces.ts,\
-  **/src/test/**/*
+  **/src/test/**/*,\
+  src/main/background-process.ts,\
+  src/main/collect.ts
 
 # Patterns used to exclude some files from duplication report
 sonar.cpd.exclusions=\
