fix: refactor some git-related commands
Also rework the test and coverage excludes

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,9 +14,7 @@ sonar.coverage.exclusions=\
   **/esbuild*js,\
   **/index.ts,\
   **/interfaces.ts,\
-  **/src/test/**/*,\
-  src/main/background-process.ts,\
-  src/main/collect.ts
+  **/src/test/**/*
 
 # Patterns used to exclude some files from duplication report
 sonar.cpd.exclusions=\
