--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.8.1",
     "@commitlint/config-conventional": "^17.8.1",
+    "@ibm/telemetry-attributes-js": "^2.0.0",
     "@ibm/telemetry-config-schema": "^0.3.0",
     "@opentelemetry/api": "^1.7.0",
     "@opentelemetry/exporter-metrics-otlp-http": "^0.46.0",
