--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "compile:watch": "tsc --watch",
     "lint": "scripts/lint",
     "lint:fix": "scripts/lint_and_fix",
-    "prepare": "husky install",
+    "prepare": "husky",
     "test": "vitest run --coverage",
     "test:watch": "vitest --coverage"
   },
@@ -64,7 +64,7 @@
     "@vitest/coverage-v8": "^0.34.6",
     "ajv": "^8.12.0",
     "ci-info": "^4.0.0",
-    "commander": "^11.1.0",
+    "commander": "^12.0.0",
     "esbuild": "^0.20.1",
     "eslint": "^8.57.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
