test: update ignored source files

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,7 +16,8 @@ sonar.coverage.exclusions=\
   **/interfaces.ts,\
   **/src/test/**/*,\
   src/main/background-process.ts,\
-  src/main/collect.ts
+  src/main/collect.ts,\
+  src/main/spawn-background-process.ts
 
 # Patterns used to exclude some files from duplication report
 sonar.cpd.exclusions=\
