fix: sonarcloud fixes

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -22,3 +22,6 @@ sonar.coverage.exclusions=\
 # Patterns used to exclude some files from duplication report
 sonar.cpd.exclusions=\
   **/src/test/**/*
+
+sonar.exclusions=\
+  src/test/__fixtures/**/*
