--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -23,5 +23,6 @@ sonar.coverage.exclusions=\
 sonar.cpd.exclusions=\
   **/src/test/**/*
 
+# Patterns to exclude from scanning altogether
 sonar.exclusions=\
   src/test/__fixtures/**/*
