feat: Js Scope - Coding Logic (#216)
Adds the programming logic that detects tokens and functions and maps them to the instrumented package, ultimately generating token and function metrics.
Adds unit testing for all things Js Scope.
Reworks substitution logic to be able to take in arrays and objects.
`createSourceFileFromText` function for unit testing ease-of-use
Fixes significant bug in `getPackageData` that was preventing collection under certain circumstances.

---------

Co-authored-by: Francine Lucca <francinelucca@users.noreply.github.com>
Co-authored-by: Joe Harvey <jdharvey-ibm@users.noreply.github.com>

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -22,3 +22,7 @@ sonar.coverage.exclusions=\
 # Patterns used to exclude some files from duplication report
 sonar.cpd.exclusions=\
   **/src/test/**/*
+
+# Patterns to exclude from scanning altogether
+sonar.exclusions=\
+  src/test/__fixtures/**/*
