feat: update config schema to latest version

--- a/src/test/__fixtures/config-files/valid/all-keys.yml
+++ b/src/test/__fixtures/config-files/valid/all-keys.yml
@@ -18,4 +18,10 @@ collect:
       allowedAttributeStringValues:
         - 'one'
         - 'two'
+  js:
+    functions:
+      allowedArgumentStringValues:
+        - 'one'
+        - 'two'
+    tokens:
 projectId: '123'
