--- a/src/test/__fixtures/config-files/invalid/empty-allowed-argument-string-values.yml
+++ b/src/test/__fixtures/config-files/invalid/empty-allowed-argument-string-values.yml
@@ -1,4 +1,3 @@
-# yaml-language-server: $schema=https://unpkg.com/@ibm/telemetry-config-schema/dist/config.schema.json
 #
 # Copyright IBM Corp. 2023, 2024
 #
@@ -8,6 +7,7 @@
 version: 1
 endpoint: 'https://example.com/v1/metrics'
 collect:
-  jsx:
-    elements: {}
+  js:
+    functions:
+      allowedArgumentStringValues: []
 projectId: '123'
