ci: ignore untestable files

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -17,12 +17,14 @@ sonar.coverage.exclusions=\
   **/src/test/**/*,\
   src/main/background-process.ts,\
   src/main/collect.ts,\
-  src/main/spawn-background-process.ts
+  src/main/spawn-background-process.ts,\
+  src/main/core/choo-choo-train.ts,\
+  src/main/core/run-command.ts
 
 # Patterns used to exclude some files from duplication report
 sonar.cpd.exclusions=\
   **/src/test/**/*
 
-# Patterns to exclude from scanning altogether
+# Patterns used to exclude some files from scanning altogether
 sonar.exclusions=\
   src/test/__fixtures/**/*
