--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/js-yaml": "^4.0.9",
     "@types/lodash": "^4.17.1",
     "@types/node": "^20.12.11",
+    "@types/semver": "^7.5.8",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "@vitest/coverage-v8": "^1.6.0",
