--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "files": [
     "dist/background-process.js",
     "dist/collect.js",
-    "dist/spawn-background-process.js"
+    "dist/spawn-background-process.js",
+    "scripts/postinstall.js"
   ],
   "scripts": {
     "build": "npm run clean && npm run compile && npm run compile:collect && npm run bundle",
@@ -44,6 +45,9 @@
     "prepare": "husky",
     "test": "vitest run --coverage",
     "test:watch": "vitest --coverage"
+  },
+  "dependencies": {
+    "chalk": "^5.3.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
