fix: ignore eslint config file from sonarcloud

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,6 +12,7 @@ sonar.coverage.exclusions=\
   scripts/**/*,\
   **/*.test.ts,\
   **/esbuild*js,\
+  **/eslint.config.js,\
   **/index.ts,\
   **/interfaces.ts,\
   **/src/test/**/*,\
