test: ignore notify.ts file from test report

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -18,6 +18,7 @@ sonar.coverage.exclusions=\
   **/src/test/**/*,\
   src/main/background-process.ts,\
   src/main/collect.ts,\
+  src/main/notify.ts,\
   src/main/spawn-background-process.ts,\
   src/main/core/choo-choo-train.ts,\
   src/main/core/run-command.ts
